2001-11-08  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-properties.c (gtk_html_class_properties_new): get
	default encoding from default widget style font
	(gtk_html_class_properties_load): ditto
	(get_default_fonts): new helper function
	(get_font_name): stolen from e-font.c

	* htmlengine-edit-text.c (find_first): use g_unichar_isalnum
	(html_engine_capitalize_word): test if next char is alnum
	before doing forward_word
	(upper_lower): don't g_assert here as it's not needed, just test
	if we have text object to modify

2001-11-06  Radek Doulik  <rodo@ximian.com>

	* htmlgdkpainter.c (alloc_e_font_try): try to use gdk_font_load
	for fixed font, if gdk_fontset_load doesn't load fixed font for us

2001-11-05  Radek Doulik  <rodo@ximian.com>
 
	* htmlengine-edit-cut-and-paste.c
	(html_engine_cut_and_paste_begin): check for e->mark != NULL
 
2001-11-05  Larry Ewing  <lewing@ximian.com>

	* htmlselection.h (html_selection_current_time): s/()/(void)/

2001-11-02  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (get_cursor): if we are between two text objects, use
	the second one fixes #14153

2001-11-03  Radek Doulik  <rodo@ximian.com>

	* htmlengine-print.c (html_engine_print_with_header_footer): set
	font manager defaults before we do test for fixed font

2001-11-01  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_replace_word_with): disable selection,
	don't store selection across replace

	* htmlembedded.c (destroy): if changed_id > 0 then disconnect it

	* htmlembedded.h: added changed_id, where we store handler id from
	connected html_embedded_object_changed

	* htmlembedded.c (html_embedded_object_changed): moved from
	htmlengine.c and renamed

2001-10-31  Ettore Perazzoli  <ettore@ximian.com>

	* htmliframe.c (html_iframe_init): Set ->scroll before calling
	`html_iframe_set_scrolling()'.  Fixes #14098.

2001-10-30  Larry Ewing  <lewing@ximian.com>

	* htmlselection.c (html_selection_current_time): add helper
	function.
