@@ -1,3 +1,8 @@
+2001-11-12  Radek Doulik  <rodo@ximian.com>
+
+	* htmlcluev.c (do_layout): compare curr y_off's (y - ascent) and
+	not old and new curr->y
+
 2001-11-08  Radek Doulik  <rodo@ximian.com>
 
 	* gtkhtml-properties.c (gtk_html_class_properties_new): get
